# local-gal-instrument

./: CMakeLists.txt  README.md
plugins/AUv3/: IMPLEMENTATION_SUMMARY.md  README.md  build.sh
plugins/AUv3/KaneMarcoPluginApp/: AppDelegate.swift  ViewController.swift
plugins/AUv3/KaneMarcoPluginExtension/: AudioUnit.swift  AudioUnitViewController.swift  Info.plist  ParameterBridge.swift
plugins/AUv3/SharedDSP/: CMakeLists.txt  KaneMarcoDSP.cpp  KaneMarcoDSP.h
plugins/au/Contents/: Info.plist
plugins/dsp/: UPFS_IMPLEMENTATION_REPORT.md  test_upfs_preset.cpp
plugins/dsp/docs/: ADVANCED_PHYSICS_IMPLEMENTATION.md
plugins/dsp/docs/plans/: GIANT_INSTRUMENT_IMPLEMENTATION.md  KANE_MARCO_AETHER_IMPLEMENTATION.md  KANE_MARCO_AETHER_PRESETS.md  KANE_MARCO_AETHER_PRESET_LOADING_GUIDE.md  KANE_MARCO_AETHER_RESEARCH.md  KANE_MARCO_AETHER_STRING_RESEARCH.md  KANE_MARCO_AETHER_WEEK1_PROGRESS.md  KANE_MARCO_AETHER_WEEK5_COMPLETE.md  KANE_MARCO_AETHER_WEEK_4_SUMMARY.md  KANE_MARCO_AETHER_WEEK_5_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_FINAL_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_WEEK1_STATUS.md  KANE_MARCO_FAMILY_WEEK2_STATUS.md  KANE_MARCO_FAMILY_WEEK3_STATUS.md  KANE_MARCO_FAMILY_WEEK4_STATUS.md  KANE_MARCO_FINAL_STEPS.md  KANE_MARCO_PERFORMANCE_REPORT.md  KANE_MARCO_RESEARCH.md  KANE_MARCO_WEEK4_BUILD_FIXES_NEEDED.md  KANE_MARCO_WEEK4_STATUS.md  KANE_MARCO_WEEK5_COMPLETION_REPORT.md
plugins/dsp/presets/: aether_giant_instrument_ir.json
plugins/standalone/Contents/: Info.plist
plugins/vst/Contents/: Info.plist
src/dsp/: LocalGalPureDSP.cpp
(+136 files in other folders)
